[package]
name = "rust-phash"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI
clap = { version = "4.5.45", features = ["derive"] }

# Walk Filesystem
walkdir = "2"

# JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

# Error Handling
thiserror = "2.0.14"

# Progress Bar
indicatif = "0.18.0"

# # Blake3 Filesystem Hashing
blake3 = "1.8.2"

# Perceptual Hashing, Ensure image *same* version used by img_hash
img_hash = "3.2.0"
image = { version = "0.23.14", default-features = false, features = [
    "png",
    "jpeg",
    "bmp",
    "gif",
    "tiff",
    "webp",
] }
